[gd_scene load_steps=2 format=3 uid="uid://d4a633tkg7xxr"]

[ext_resource type="Script" uid="uid://b7fye8i5s0h5r" path="res://Scenes/Minigames/Game1-Pasat/MinigameMenus/minigame_menus.gd" id="1_6yaqc"]

[node name="Menu" type="Control"]
z_index = 50
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 480.0
script = ExtResource("1_6yaqc")

[node name="Pause" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.11774104, 0.11774104, 0.11774104, 0.4)

[node name="MarginContainer" type="MarginContainer" parent="Pause"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Pause/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Pause/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="Pause/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 48
text = "Game is paused"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Pause/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 24
text = "...but is still running!"
horizontal_alignment = 1

[node name="Unpause" type="Button" parent="Pause/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "resume_minigame"

[node name="ReturnToMainGame" type="Button" parent="Pause/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "quit_minigame"

[node name="CansLabel" type="Label" parent="Pause/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 2
text = "Lorem ipsum papaj cardinale"
horizontal_alignment = 1

[node name="GameOver" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.4665867, 0.027843285, 0.03803554, 0.4)

[node name="MarginContainer" type="MarginContainer" parent="GameOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="GameOver/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 48
text = "Game Over!"
horizontal_alignment = 1

[node name="CansLabel" type="Label" parent="GameOver/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 2
text = "Lorem ipsum papaj cardinale"
horizontal_alignment = 1

[node name="Replay" type="Button" parent="GameOver/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "replay_minigame"

[node name="ReturnToMainGame" type="Button" parent="GameOver/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "quit_minigame"

[connection signal="pressed" from="Pause/MarginContainer/VBoxContainer/Unpause" to="." method="on_unpause_button_press"]
[connection signal="pressed" from="Pause/MarginContainer/VBoxContainer/ReturnToMainGame" to="." method="on_return_button_press"]
[connection signal="pressed" from="GameOver/MarginContainer/VBoxContainer/Replay" to="." method="on_retry_button_press"]
[connection signal="pressed" from="GameOver/MarginContainer/VBoxContainer/ReturnToMainGame" to="." method="on_return_button_press"]
